# money_bot

./: .gitignore  CMakeLists.txt  README.md  account_setup.py  algo.py  algo_math.py  algorithm.py  backend.py  backend_data.py  backtrader_infra.py  backtrader_setup.py  data  data.py  infrastructure.py  kill_all.py  listener.py  logger.py  macd_rsi.py  money.cpp  process_api.py  run.py  security.py  transaction.py
alpaca_wrappers/: wrapper.hpp
dependencies/: CMakeLists.txt  README.md
include/money_bot/: money_bot.h
src/: CMakeLists.txt  main.cpp  money.cpp
tests/: CMakeLists.txt  test_foo.cpp
